<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jboss.portlet</groupId>
	<artifactId>netflix</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Netflix Portlet</name>
	<url>http://www.eejot.org</url>

	<properties>
		<portal.dir>/home/mposolda/software/jboss-epp-5.0-qVue/jboss-as</portal.dir>
		<portal.config>default</portal.config>
		<portal.deploy.dir>${portal.dir}/server/${portal.config}/deploy</portal.deploy.dir>
		
		<jsf.version>1.2_13</jsf.version>
		<richfaces.version>3.3.3.Final</richfaces.version>
		<portletbridge.version>2.0.0.CR1</portletbridge.version>
		<cargo.container>jboss42x</cargo.container>
		<cargo.jvmargs>-Xms128m -Xmx512m -XX:MaxPermSize=256m</cargo.jvmargs>
		<cargo.host>localhost</cargo.host>
		<cargo.port>8080</cargo.port>
		<cargo.wait>true</cargo.wait>
		<installDir>${java.io.tmpdir}/cargo-installs</installDir>
	</properties>
	
	<prerequisites>
		<maven>2.0.9</maven>
	</prerequisites>

	<licenses>
		<license>
			<name></name>
			<url></url>
		</license>
	</licenses>

	<scm>
		<connection></connection>
		<developerConnection></developerConnection>
		<url></url>
	</scm>

	<issueManagement>
		<system></system>
		<url></url>
	</issueManagement>

	<developers>
		<developer>
			<id>prabhat</id>
			<name>Prabhat Jha</name>
			<email>pjha@redhat.com</email>
			<timezone></timezone>
		</developer>
		<developer>
			<id>mposolda</id>
			<name>Marek Posolda</name>
			<email>mposolda@redhat.com</email>
			<timezone></timezone>
		</developer>
	</developers>

	<build>

		<defaultGoal>package</defaultGoal>
		<finalName>netflix-portlet</finalName>

		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-idea-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<dependenciesAsLibraries>true</dependenciesAsLibraries>
					<useFullNames>false</useFullNames>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<id>repository.jboss.com</id>
			<name>Jboss Repository for Maven</name>
			<url>http://repository.jboss.com/maven2/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>snapshots.jboss.org</id>
			<name>JBoss Snapshot Repository</name>
			<url>http://snapshots.jboss.org/maven2</url>
		</repository>
		<repository>
			<id>BLC</id>
			<name>BLC</name>
			<url>http://nexus.blueleftistconstructor.com/content/repositories/releases</url>
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>codehaus.org</id>
			<name>CodeHaus Plugin Snapshots</name>
			<url>http://snapshots.repository.codehaus.org</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>javax.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>${jsf.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>${jsf.version}</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.jboss.portletbridge</groupId>
			<artifactId>portletbridge-api</artifactId>
			<version>${portletbridge.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-impl</artifactId>
				</exclusion>
			</exclusions>			
		</dependency>
		<dependency>
			<groupId>org.jboss.portletbridge</groupId>
			<artifactId>portletbridge-impl</artifactId>
			<version>${portletbridge.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-impl</artifactId>
				</exclusion>
			</exclusions>			
		</dependency>
		<dependency>
			<groupId>org.richfaces.framework</groupId>
			<artifactId>richfaces-impl</artifactId>
			<version>${richfaces.version}</version>
		</dependency>
		<dependency>
			<groupId>org.richfaces.framework</groupId>
			<artifactId>richfaces-api</artifactId>
			<version>${richfaces.version}</version>
		</dependency>
		<dependency>
			<groupId>org.richfaces.ui</groupId>
			<artifactId>richfaces-ui</artifactId>
			<version>${richfaces.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.faces</groupId>
					<artifactId>jsf-impl</artifactId>
				</exclusion>
			</exclusions>			
		</dependency>
		<dependency>
			<groupId>com.sun.facelets</groupId>
			<artifactId>jsf-facelets</artifactId>
			<version>1.1.15.B1</version>
		</dependency>
		<dependency>
			<groupId>com.lysergicjava.nfclient</groupId>
			<artifactId>netflix-java-client</artifactId>
			<version>2.1.2</version>
		</dependency>

		<dependency>
			<groupId>net.oauth</groupId>
			<artifactId>oauth-core</artifactId>
			<version>20081127</version>
		</dependency>

		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.1.1</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xmlParserAPIs</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Provided and test dependencies. Not runtime -->
		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>apache-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>0.9.17</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>

		<!--
			Deploying netflix WAR file into GateIn with usage of
			maven-antrun-plugin
		-->
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.3</version>
						<executions>
							<execution>
								<id>deploy</id>
								<phase>package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<copy
											file="${project.build.directory}/${project.build.finalName}.war"
											tofile="${portal.deploy.dir}/netflix-portlet.war"></copy>
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>


		<!-- Obsolete jboss portal profiles. TODO: remove them ? -->
		<profile>
			<id>jbossportal</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<configuration>
							<webResources>
								<resource>
									<filtering>false</filtering>
									<directory>${project.basedir}/src/main/jbossportal</directory>
									<targetPath>WEB-INF</targetPath>
									<includes>
										<include>jboss-*.xml</include>
										<include>portlet-instances.xml</include>
										<include>richfacesecho-object.xml</include>
									</includes>
								</resource>
							</webResources>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>local</id>
			<activation>
				<property>
					<name>local</name>
				</property>
			</activation>
			<properties>
				<jboss.zip.home>
					file:${JBOSS_ZIP_HOME}
            </jboss.zip.home>
				<jboss.home.dir>
					${project.basedir}/target/installs/${JBOSS_HOME_DIR}/server/default
            </jboss.home.dir>
			</properties>
		</profile>

		<profile>
			<id>download-2.7</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>!local</name>
				</property>
			</activation>
			<properties>
				<jboss.zip.home>
					http://downloads.sourceforge.net/jboss/jboss-portal-2.7.2-bundled.zip
            </jboss.zip.home>
				<jboss.home.dir>
					${project.basedir}/target/installs/jboss-portal-2.7.2-bundled/jboss-portal-2.7.2/server/default
            </jboss.home.dir>
			</properties>
		</profile>

		<profile>
			<id>local-portal</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven2-plugin</artifactId>
						<version>1.0</version>
						<configuration>
							<wait>true</wait>
							<container>
								<containerId>
									${cargo.container}
                        </containerId>
								<zipUrlInstaller>
									<url>${jboss.zip.home}</url>
									<installDir>
										${project.basedir}/target/installs
                           </installDir>
								</zipUrlInstaller>
							</container>

							<configuration>
								<type>existing</type>
								<home>${jboss.home.dir}</home>
								<properties>
									<cargo.jboss.configuration>
										default
                           </cargo.jboss.configuration>
									<cargo.jvmargs>
										${cargo.jvmargs}
                           </cargo.jvmargs>
									<cargo.host>
										${cargo.host}
                           </cargo.host>
									<cargo.servlet.port>
										${cargo.port}
                           </cargo.servlet.port>
									<cargo.logging>low</cargo.logging>
								</properties>
							</configuration>

							<deployer>
								<type>installed</type>
								<deployables>
									<deployable>
										<location>target/richfaces-basic.war</location>
										<pingURL>http://localhost:8080/simple-portal/</pingURL>
									</deployable>
								</deployables>
							</deployer>
						</configuration>

					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
